<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minWidth="240dp" android:layout_centerInParent="true">
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@+id/text_title_alert" android:background="@drawable/zalosdk_border11" android:padding="7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/zalosdk_notification" android:textAlignment="center"/>
    <TextView android:textSize="14sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@+id/zalosdk_message_ctl" android:background="@color/zalosdk_white" android:paddingLeft="10dp" android:paddingTop="2dp" android:paddingRight="10dp" android:paddingBottom="2dp" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="75dp" android:text="@string/zalosdk_processing"/>
    <ImageView android:id="@+id/zalosdk_status_ctl" android:visibility="gone" android:layout_width="32dp" android:layout_height="32dp" android:layout_margin="5dp" android:contentDescription="@string/zalosdk_app_name"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/zalosdk_cancel_ctl" android:background="@drawable/zalosdk_border07" android:paddingTop="10dp" android:paddingBottom="10dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/zalosdk_cancel" android:layout_weight="1"/>
        <View android:id="@+id/button_devider" android:background="@color/zalosdk_white" android:visibility="gone" android:layout_width="2dp" android:layout_height="match_parent"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/zalosdk_ok_ctl" android:background="@drawable/zalosdk_border07" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/zalosdk_close" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
